--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -2,54 +2,6 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 }
 a { color: inherit;
 }
-.lili {
-  margin-left: 375px;
-}
-h1, h2, h3, h4, h5, h6, p, ul, blockquote, ol, li { width: 700px; margin: 0 auto;
-}
-h6 { font-size: 20px; color: rgba(0, 0, 0, .8); margin-top: 20px; margin-bottom: 20px;
-}
-ol, li { margin-left: 43px; margin-right: 300px;
-}
-#lipro { margin-left: 215px;
-}
-#oldop { margin: 20px 300px 15px 405px;
-}
-#oldop2 { margin: 15px 300px 10px 25px;
-}
-hr { margin: 10px 300px 10px 410px;
-}
-h1, h2, h3, h6 { font-family: 'PT Sans Caption', sans-serif; font-weight: bold;
-}
-h1 { margin-top: 67px; font-size: 38px; line-height: 45px;
-}
-h1 + p { margin-top: 8px; font-family: 'PT Sans Caption', sans-serif; font-size: 22px; line-height: 32px; color: rgba(0,0,0,.4);
-}
-h1 + p + p { margin-top: 30px;
-}
-h2 { margin-top: 43px; font-size: 32px; line-height: 36px; color: rgba(0, 0, 0, .8);
-}
-h2 + p,
-h2 + blockquote { margin-top: 7px;
-}
-h3 { margin-top: 36px; font-size: 28px; line-height: 34px; color: rgba(0, 0, 0, .8);
-}
-h3 + p,
-h3 + blockquote { margin-top: 6px;
-}
-p, blockquote, li { margin-top: 12px; font-size: 20px; line-height: 34px;
-}
-blockquote { font-style: italic;
-}
-img { display: block; width: 800px; margin: 79px auto 0;
-}
-img + h2 { margin-top: 79px;
-}
-img + p,
-img + blockquote,
-img + ul { margin-top: 77px;
-}
-h2 + img { margin-top: 82px;
-}
-h3 + img { margin-top: 81px;
+* {
+  box-sizing: border-box;
 }
