--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -8,7 +8,7 @@ article h6 { font-size: 20px; color: rgba(0, 0, 0, .8); margin-top: 20px; margin
 
 article hr { margin: 10px 300px 10px 410px;
 }
-article h1, article h2, article h3, article h6 { font-family: 'PT Sans Caption', sans-serif; font-weight: bold;
+article h1, article h2, article h3, article h6 { font-family: 'Brutal Type'; font-weight: 200; font-style: normal;
 }
 article h1 { margin-top: 67px; font-size: 38px; line-height: 45px;
 }
